--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -1,15 +1,15 @@
 ---
 layout: archive
-permalink: /categories/
-title: "Posts by Category"
+permalink: /tags/
+title: "Posts by Tag"
 author_profile: true
 ---
 
-{% include group-by-array collection=site.posts field="categories" %}
+{% include group-by-array collection=site.posts field="tags" %}
 
-{% for category in group_names %}
+{% for tag in group_names %}
   {% assign posts = group_items[forloop.index0] %}
-  <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
+  <h2 id="{{ tag | slugify }}" class="archive__subtitle">{{ tag }}</h2>
   {% for post in posts %}
     {% include archive-single.html %}
   {% endfor %}
